# computer-systems

./: CMakeLists.txt  Makefile  README.md  build.sh  cs_build.sh
ch1/: README.md  programs-are-translated-by-other-programs-into-different-forms.md
ch1/doc/: programs-are-translated-by-other-programs-into-different-forms.md
ch1/src/: hello.c
ch2/: CMakeLists.txt  Makefile  README.md  any-odd-one.c  fits-bits.c  int-shifts-are-arithmetic.c  is-little-endian.c  lower-one-mask.c  odd-ones.c  replace-byte.c  show-bytes.c  solutions.md  xbyte.c
ch2/src/: CMakeLists.txt  Makefile  calloc.c  copy-int.c  divide-power2.c  float-absval.c  float-f2i.c  float-half.c  float-i2f.c  float-le.c  float-negate.c  float-twice.c  fpwr2.c  high-prod.c  int-shifts-are-arithmetic.c  int-size-is-32.c  is-little-endian.c  leftmost-one.c  mul3div4.c  replace-byte.c  rotate-left.c  saturating-add.c  srl-and-sra.c  threeforths.c  tsub-ok.c
ch3/: CMakeLists.txt  README.md
ch3/src/: CMakeLists.txt  cread-alt.c  decode2.c  good-echo.c  loop.c  switch-prob.c  switch3.c
ch4/: README.md
ch4/sim/: README.md
ch4/src/: CMakeLists.txt  bubble-a.c  bubble-a.s  bubble-b-cond.yo  bubble-b-cond.ys  bubble-b-cond1.yo  bubble-b-cond1.ys  bubble-b-cond3.ys  bubble-b.c  bubble-b.s  bubble-b.yo  bubble-b.ys  switchv-table.yo  switchv-table.ys  switchv.c  switchv.s  switchv.yo  switchv.ys  util.c  util.h
ch5/: README.md
ch5/src/: 5.13.c  5.14.c  5.15.c  5.16.c  5.17.c  5.18.c  5.5.c  5.6.c  CMakeLists.txt  poly.c  poly.h  psum.c  psum.h  psum_test.c  vec.c  vec.h
ch6/: README.md
(+16 files in other folders)
